--- a/app/templates/inbox.html
+++ b/app/templates/inbox.html
@@ -29,7 +29,21 @@
   .empty-box{padding:24px 8px;text-align:center;}
   .empty-box img{
     display:block;margin:10px auto;max-width:300px;width:75%;
-    height:auto;object-fit:contain;opacity:.98;
+    
+    
+    @media (max-width: 768px) {
+    header.topbar,
+    .m-top-tabs,
+    .notif-panels,
+    .search-wrapper,
+    .page-header {
+        display: none !important;
+    }
+    body.has-tabbar{
+        padding-top: 0 !important;
+    }
+}
+height:auto;object-fit:contain;opacity:.98;
   }
 </style>
 
